@@ -15,10 +15,14 @@ import org.prgms.locomocoserver.user.domain.User;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigInteger;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,12 +34,15 @@ public class ChatRoomService {
     private final UserService userService;
 
     @Transactional
-    public ChatRoomDto enterChatRoom(Long roomId, ChatMessageRequestDto requestDto) {
+    public ChatRoomDto enterChatRoom(ChatMessageRequestDto requestDto) {
         ChatRoom chatRoom = chatRoomRepository.findByIdAndDeletedAtIsNull(requestDto.chatRoomId())
                 .orElseGet(() -> createChatRoom(requestDto));
-        addParticipant(chatRoom, requestDto.senderId());
 
-        return ChatRoomDto.of(chatRoom);
+        if (!isParticipantExist(chatRoom, requestDto.senderId())) {
+            addParticipant(chatRoom, requestDto.senderId());
+        }
+
+        return ChatRoomDto.of(chatRoom, ChatMessageDto.of(getLastMessage(chatRoom.getId())));
     }
 
     @Transactional
@@ -49,28 +56,28 @@ public class ChatRoomService {
     }
 
     @Transactional(readOnly = true)
-    public List<ChatRoomDto> getAllChatRoom(Long userId, String cursor, int pageSize) {
-        Pageable pageable = PageRequest.of(0, pageSize);
-        if (cursor == null) {
-            Page<ChatRoom> page = chatRoomRepository.findByParticipantsId(userId, pageable);
-            pageable = page.nextPageable();
-        }
-        List<ChatRoomDto> chatRoomDtos = chatRoomRepository.findByParticipantsId(userId, pageable)
-                .map(chatRoom -> ChatRoomDto.of(chatRoom))
-                .stream().toList();
+    public List<ChatRoomDto> getAllChatRoom(Long userId, Long cursor, int pageSize) {
+        if (cursor == null) cursor = Long.MAX_VALUE;
+        Pageable pageable = PageRequest.of(0, pageSize, Sort.by(Sort.Direction.DESC, "id"));
+        Page<ChatRoom> page = chatRoomRepository.findByParticipantsId(userId, cursor, pageable);
+
+        List<ChatRoomDto> chatRoomDtos = page.map(chatRoom -> ChatRoomDto.of(chatRoom, ChatMessageDto.of(getLastMessage(chatRoom.getId())))).stream().toList();
+
         return chatRoomDtos;
     }
 
     @Transactional(readOnly = true)
-    public List<ChatMessageDto> getAllChatMessages(Long roomId, String cursor, int pageSize) {
-        Pageable pageable = PageRequest.of(0, pageSize);
-        if (cursor == null) {
-            Page<ChatMessage> page = chatMessageRepository.findAllByChatRoomId(roomId, pageable);
-            pageable = page.nextPageable();
-        }
-        List<ChatMessageDto> chatMessageDtos = chatMessageRepository.findAllByChatRoomId(roomId, pageable)
-                .map(chatMessage -> ChatMessageDto.of(chatMessage))
-                .stream().toList();
+    public List<ChatMessageDto> getAllChatMessages(Long roomId, Long cursor, int pageSize) {
+        if (cursor == null) cursor = Long.MAX_VALUE;
+        Pageable pageable = PageRequest.of(0, pageSize, Sort.by(Sort.Direction.DESC, "id"));
+        Page<ChatMessage> page = chatMessageRepository.findAllByChatRoomIdAndIdGreaterThan(roomId, cursor, pageable);
+
+        List<ChatMessageDto> chatMessageDtos = page.getContent().stream()
+                .map(ChatMessageDto::of)
+                .collect(Collectors.toList());
+
+        Collections.reverse(chatMessageDtos);
+
         return chatMessageDtos;
     }
 
@@ -78,6 +85,15 @@ public class ChatRoomService {
     public ChatRoom getById(Long id) {
         return chatRoomRepository.findByIdAndDeletedAtIsNull(id)
                 .orElseThrow(() -> new IllegalArgumentException("ChatRoom Not Found chatRoomId: " + id));
+    }
+
+    private boolean isParticipantExist(ChatRoom chatRoom, Long userId) {
+        return chatRoom.getParticipants().stream()
+                .anyMatch(participant -> participant.getId().equals(userId));
+    }
+
+    private ChatMessage getLastMessage(Long roomId) {
+        return chatMessageRepository.findLastMessageByRoomId(roomId);
     }
 
     private void addParticipant(ChatRoom existingRoom, Long participantId) {
